2012-03-30  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/ItkToolbox/CMakeLists.txt (v0.4.4):
	* Add
	matlab/ItkToolbox/MexMultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.hpp (v0.1.0):
	* Add
	matlab/ItkToolbox/MexMultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.cpp (v0.1.0):
	* matlab/itk_imfilter.m (v0.4.7):
	* matlab/ItkToolbox/ItkImFilter.cpp (v0.6.6):

	- Add filter
	itk::MultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.

	* matlab/ItkToolbox/add_filter_template.sh (v0.1.2):

	- Fix bug. Rev and Date seach patterns in sed expression were too
	specific.

2012-03-29  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/ItkToolbox/ItkImFilter.cpp (v0.6.5):
	* matlab/itk_imfilter.m (v0.4.6):
	* matlab/ItkToolbox/MexAnisotropicDiffusionVesselEnhancementImageFilter.cpp
	(v0.2.0):
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkAnisotropicDiffusionVesselEnhancementImageFilter.h
	(v0.3.0):
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkAnisotropicDiffusionVesselEnhancementImageFilter.txx
	(v0.3.0):
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkMultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.h
	(v0.2.0):
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkMultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.txx
	(v0.2.0):

	- Add linear scales besides logarithmic scales. It seems that for
	small ranges of sigma values, a linear scale covers the range
	better than a logarithmic scale.

2012-03-28  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/ItkToolbox/MexAnisotropicDiffusionVesselEnhancementImageFilter.cpp
	(v0.1.3):

	- I had forgotten to remove some debug messages.

2012-03-27  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/ItkToolbox/ItkPSTransform.cpp (v0.3.1):

	- Enable bspline warp also for ITK v4.x. With help from Nicholas
	Tustison in this thread of the insight-users' mailing list

	http://www.itk.org/pipermail/insight-users/2012-March/044238.html
